--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,16 @@
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #f2ebe3;
 }
 
-@media (min-width: 350px) and (orientation: landscape) {
+@media screen and (min-width: 600px) and (min-height: 438px) {
   body {
-    padding: 80px;
-    display: flex;
-    justify-content: center;
+    height: 100vh;
+    max-height: 100vh;
   }
 }
 
@@ -26,6 +28,7 @@ body {
 
 @media (min-width: 350px) and (orientation: landscape) {
   #CardComponent {
+    margin: 30px 0px;
     width: 450px;
   }
 }
@@ -34,11 +37,9 @@ body {
   #CardComponent {
     display: flex;
     flex-direction: row;
-    position: absolute;
-    top: 50vh;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    min-width: 700px;
     width: 800px;
+    max-width: 800px;
     height: 550px;
     border-radius: 10px;
     background-color: #ffffff;
